--- a/css/index.scss
+++ b/css/index.scss
@@ -13,9 +13,13 @@ body {
     display: flex;
 }
 
+#padding-col {
+    width: 20%;
+}
+
 #left-col {
-    width: 30%;
-    padding-left: 25%;
+    width: 10%;
+    //padding-left: 25%;
 }
 
 #logo,
