--- a/css/index.css
+++ b/css/index.css
@@ -36,6 +36,7 @@ body {
 #center-col {
   width: 20%;
   position: relative;
+  max-height: 93%;
 }
 
 #img-desc {
@@ -58,14 +59,12 @@ body {
 }
 
 #right-col {
-  display: inline-block;
   width: 50%;
   padding-top: 98px;
 }
 
 #front-img {
-  display: block;
-  height: 60%;
+  height: 100%;
 }
 
 /*# sourceMappingURL=index.css.map */
