--- a/css/index.scss
+++ b/css/index.scss
@@ -101,7 +101,9 @@ body {
     display: block;
   }
   #front-img {
+    display: block;
     width: 100%;
     height: auto;
+    margin: auto;
   }
 }
