--- a/css/index.css
+++ b/css/index.css
@@ -105,8 +105,10 @@ body {
   }
 
   #front-img {
-    width: 100%;
+    display: block;
+    width: 90%;
     height: auto;
+    margin: auto;
   }
 }
 
