--- a/css/index.css
+++ b/css/index.css
@@ -8,6 +8,15 @@ body {
   box-sizing: border-box;
 }
 
+p,
+a {
+  font-family: "Open Sans", sans-serif;
+}
+
+#desc-senc {
+  font-family: "Roboto", sans-serif;
+}
+
 #root {
   display: flex;
 }
@@ -36,7 +45,6 @@ body {
 #center-col {
   width: 20%;
   position: relative;
-  max-height: 93%;
 }
 
 #img-desc {
@@ -60,12 +68,17 @@ body {
 
 #right-col {
   width: 50%;
-  padding-top: 98px;
-  height: 70vh;
+  height: 60vh;
 }
 
 #front-img {
   height: 100%;
+}
+
+#canvas {
+  width: 70%;
+  display: flex;
+  padding-top: 98px;
 }
 
 /*# sourceMappingURL=index.css.map */
