--- a/css/index.scss
+++ b/css/index.scss
@@ -9,15 +9,6 @@ body {
     box-sizing: border-box;
 }
 
-p,
-a {
-    font-family: 'Open Sans', sans-serif;
-}
-
-#desc-senc {
-    font-family: 'Roboto', sans-serif;
-}
-
 #root {
     display: flex;
 }
@@ -50,6 +41,7 @@ a {
 #center-col {
     width: 20%;
     position: relative;
+    max-height: 93%;
 }
 
 #img-desc {
@@ -74,15 +66,10 @@ a {
 
 #right-col {
     width: 50%;
-    height: 60vh;
+    padding-top: 98px;
+    height: 70vh;
 }
 
 #front-img {
     height: 100%;
-}
-
-#canvas {
-    width: 70%;
-    display: flex;
-    padding-top: 98px;
 }
