--- a/css/index.css
+++ b/css/index.css
@@ -8,6 +8,15 @@ body {
   box-sizing: border-box;
 }
 
+p,
+a {
+  font-family: "Open Sans", sans-serif;
+}
+
+#front-desc {
+  font-family: "Roboto", sans-serif;
+}
+
 #root {
   display: flex;
 }
