--- a/css/index.scss
+++ b/css/index.scss
@@ -29,20 +29,25 @@ a {
     width: 10%; //padding-left: 25%;
 }
 
-#logo,
-#menu {}
+
+#menu {
+    margin-left: 10px;
+}
 
 .menu-link {
     color: #B9B9B9;
-    display: block;
-    padding-left: 10px;
+    display: list-item;
     padding-top: 15px;
+    //padding-left: 10px;
     text-decoration: none;
     font-size: 11px;
+    list-style: none;
 }
 
 .menu-link:hover {
     color: black;
+    list-style: malayalam;
+
 }
 
 #center-col {
